[gd_scene load_steps=2 format=3 uid="uid://3qprhn0jes4i"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_vmmqq"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_vmmqq")

[node name="LobbyControls" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -320.0
offset_right = -100.0
offset_bottom = 320.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlayerDisplay" type="Panel" parent="LobbyControls"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 420.0
offset_bottom = 520.0

[node name="MarginContainer" type="MarginContainer" parent="LobbyControls/PlayerDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="LobbyControls/PlayerDisplay/MarginContainer"]
layout_mode = 2
bbcode_enabled = true

[node name="Control" type="Panel" parent="LobbyControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 420.0
offset_bottom = -20.0
grow_vertical = 0

[node name="PreGame" type="HBoxContainer" parent="LobbyControls/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Create" type="Button" parent="LobbyControls/Control/PreGame"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Game"

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyControls/Control/PreGame"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Address" type="LineEdit" parent="LobbyControls/Control/PreGame/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "127.0.0.1"
alignment = 1
context_menu_enabled = false

[node name="Join" type="Button" parent="LobbyControls/Control/PreGame/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Join Game"

[node name="InGame" type="HBoxContainer" parent="LobbyControls/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="LobbyControls/Control/InGame"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Game"

[node name="CancelButton" type="Button" parent="LobbyControls/Control/InGame"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit Game"

[node name="PlayerSetup" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -320.0
offset_right = 540.0
offset_bottom = 320.0
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="PlayerSetup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Player Name"
alignment = 1
context_menu_enabled = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="LobbyControls/Control/PreGame/Create" to="." method="create_game"]
[connection signal="pressed" from="LobbyControls/Control/PreGame/VBoxContainer/Join" to="." method="on_join_button"]
[connection signal="pressed" from="LobbyControls/Control/InGame/StartButton" to="." method="on_start_button"]
[connection signal="pressed" from="LobbyControls/Control/InGame/CancelButton" to="." method="on_cancel_button"]
